--- a/webpagesGL.css
+++ b/webpagesGL.css
@@ -1,19 +1,22 @@
 /*
- *Name: [First Last]
- *UnityID: [unityID]
- *Date: [Date Completed]
- *Assignment: [Assignment Name]
- *Description: [Assignment Description]
+ *Name: Alyspn Pedley
+ *UnityID: ajpedley
+ *Date: 9/20/24
+ *Assignment: WebpagesGL
+ *Description: Guided Lab Assignment, about me page]
  */
  
 p {
-    property: value;
+    font-family: Times;
+    font-size: 16px;
+    color: #DECAFF;
 }
 
-.class {
-    property: value;
+.table-border {
+    border: 1px solid #DECAFF;
 }
 
-#id {
-    property:value;
+#photo-resize {
+    max-width:250px;
+    max-height:300px;
 }
